tdf#170457 docx export: only export comment start/end for this node

Without this patch, LO was creating documents
that not only had the comment indicators in the wrong position,
but was also being (correctly) reported as corrupt by MS Word.

make CppunitTest_sw_ooxmlexport26 CPPUNIT_TEST_NAME=testwDateValueFormat

Change-Id: I237742274d5d57bb491e25116d90d42c231faced
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198018
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198158